--- a/frontend/src/scss/_App.scss
+++ b/frontend/src/scss/_App.scss
@@ -1,7 +1,7 @@
 @import 'library';
 
 h1 {
-  @include mt;
+  @include mt-2;
   font-size: $large;
   font-weight: bold;
   color: $red;
@@ -17,7 +17,6 @@ h1 {
 
   .logo {
     height: 40vmin;
-    pointer-events: none;
   }
 
   .header {
@@ -26,11 +25,10 @@ h1 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: white;
   }
 
   .chatBtn {
-    @include mt;
+    @include mt-1;
     padding: 12px 40px;
     border-radius: 50px;
     background-color: $red;
@@ -38,6 +36,12 @@ h1 {
     border: none;
     font-size: $medium;
     font-weight: bold;
+
+    &:hover {
+      cursor: pointer;
+      background-color: $red-darker;
+      transition: 0.2s;
+    }
   }
 }
 
