--- a/frontend/src/scss/_library.scss
+++ b/frontend/src/scss/_library.scss
@@ -5,8 +5,17 @@ $large: 60px;
 $medium: 20px;
 
 @mixin mt-1 {
-    margin-top: 30px;
+    margin-top: 20px;
 }
 @mixin mt-2 {
-    margin-top: 50px;
+    margin-top: 40px;
+}
+@mixin mt-3 {
+    margin-top: 60px;
+}
+@mixin mt-4 {
+    margin-top: 80px;
+}
+@mixin mt-5 {
+    margin-top: 100px;
 }
