--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -1,5 +1,7 @@
 @import 'reset';
 @import 'App';
+@import 'Antd';
+// TODO: antd less file customize color
 
 body {
     font-family: Arial, Helvetica, sans-serif;
