--- a/frontend/src/scss/_App.scss
+++ b/frontend/src/scss/_App.scss
@@ -4,10 +4,6 @@
   margin: 0 auto;
   text-align: center;
 
-  .homepage {
-    position: relative;
-  }
-
   .logo {
     @include mt-5;
     height: 35vmin;
@@ -29,28 +25,29 @@
   }
 
   .chatBtn {
-    background-color: $red;
-    border: $red-darker;
     font-weight: bold;
     text-decoration: none;
 
     &:hover {
       cursor: pointer;
-      background-color: $red-darker;
       transition: 0.2s;
     }
   }
 }
 
-.homepage:before {
-  content: "";
-  background-image: url(https://images.unsplash.com/photo-1590301729964-23833732ee04?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2070&q=80);
-  position: absolute;
-  background-size: cover;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: -1;
-  opacity: 0.3;
+.homepage {
+  position: relative;
+
+  &:before {
+    content: "";
+    background-image: url(https://images.unsplash.com/photo-1590301729964-23833732ee04?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2070&q=80);
+    position: absolute;
+    background-size: cover;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    opacity: 0.3;
+  }
 }
