--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -4,5 +4,14 @@
 // TODO: antd less file customize color
 
 body {
+    margin: 0 auto;
     font-family: Arial, Helvetica, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
+  
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
+}
+
