--- a/frontend/src/scss/_library.scss
+++ b/frontend/src/scss/_library.scss
@@ -1,5 +1,13 @@
 $red: #b83d2b;
 $red-darker: #a03b30;
+$orange: #dd6144;
+$yellow: #fac972;
+$aqua: #a3cfcf;
+$navy: #233774;
+$gray: #a8a8a8;
+$gray-lighter: #a8a8a8;
+$wheat: #f9f3ea;
+$white: white;
 
 $extra-large: 100px;
 $large: 60px;
