--- a/frontend/src/scss/_library.scss
+++ b/frontend/src/scss/_library.scss
@@ -12,6 +12,7 @@ $gray: #a8a8a8;
 $gray-lighter: #f4f4f4;
 $gray-darker: #706c6c;
 $wheat: #f9f3ea;
+$wheat-darker: #e4dbcd;
 $white: white;
 $black: black;
 
