--- a/frontend/src/scss/_Chat.scss
+++ b/frontend/src/scss/_Chat.scss
@@ -178,9 +178,14 @@
             width: 30%;
             margin: 0;
 
+            .material-icons:hover {
+                font-weight: bold;
+                @include transition-1;
+            }
+
             a {
                 color: $red;
-                font-weight: bold;
+                @include transition-1;
             }
             a:hover {
                 font-weight: bold;
