add map component, delete exit api

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -1,7 +1,7 @@
 @import 'reset';
 @import 'App';
 @import 'Antd';
-// TODO: antd less file customize color
+@import 'State';
 @import 'Chat';
 @import 'Swiper';
 @import 'InfoCard';
