fix gethotel, getstate render with api

--- a/frontend/src/scss/_InfoCard.scss
+++ b/frontend/src/scss/_InfoCard.scss
@@ -49,7 +49,7 @@
 
 .item-context {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     margin-bottom: 5px;
 
     .material-icons {
