render api response/loading spinner/force reload

--- a/frontend/src/scss/_State.scss
+++ b/frontend/src/scss/_State.scss
@@ -1,6 +1,7 @@
 @import 'library';
 
 .state-ctnr {
+    @include fade-in;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
