--- a/frontend/src/scss/_State.scss
+++ b/frontend/src/scss/_State.scss
@@ -9,7 +9,8 @@
 }
 
 .state-list {
-    width: 40%;
+    width: 80%;
+    // google map exists: 40%, smaller fonts
 
     li {
         font-size: large;
