add taxi hover pointer

--- a/frontend/src/scss/_Chat.scss
+++ b/frontend/src/scss/_Chat.scss
@@ -130,6 +130,10 @@
         color: white;
         font-weight: bold;
     }
+    .taxi:hover{
+        // background-color: $gray-darker;
+        cursor: pointer;
+    }
 }
 
 .inform {
